--- a/20240216_decoupled_express/project/package.json
+++ b/20240216_decoupled_express/project/package.json
@@ -115,8 +115,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon mongowala.js",
-    "jstart":"nodemon jsonwala.js"
+    "start": "nodemon index.js"
   },
   "keywords": [
     "MongoDb",
